# llm-provider-benchmark

./: .gitignore  CLAUDE.md  README.md  prompts.txt  providers.toml  pyproject.toml
src/: cli.py  metrics.py  providers.py  records.py  runner.py  storage.py
tests/: test_cli.py  test_metrics.py  test_providers.py  test_pyproject_config.py  test_runner.py  test_storage.py
