[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-provider-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "litellm>=1.81.13",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "typer>=0.19.2",
]

[project.scripts]
llm-bench = "cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "src/cli.py",
    "src/metrics.py",
    "src/providers.py",
    "src/records.py",
    "src/runner.py",
    "src/storage.py",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
